<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NFCTagAESDemo</string>
    <string name="title_activity_tag_reader">TagReaderActivity</string>  
    <string name="title_activity_tag_writer">TagWriterActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_tag_reader">Reading Tag</string>
    <string name="title_fragment_tag_writer">Writing Tag</string>    
    <string name="action_settings">Settings</string>  
    <string name="action_save">Save</string>
    
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="item_type_and_nfc_storage_size">Item type and NFC storage size</string>
    <string name="content">Content</string>
    <string name="plain_text">Plain text</string>
    <string name="cipher_text">Cipher text</string>
    <string name="plain_text_hint">Please enter the plain text</string>
    <string name="please_generate_your_key">Please generate your key.</string>
    <string name="pref_key">AES Key</string>
    <string name="generate_key">Generate a new key?</string>
    <string name="your_settings_have_been_saved">Your settings have been saved.</string>
    <string name="plaintext_empty">The plain text is empty.</string>
    <string name="ciphertext_empty">The cipher text is empty.</string>
    <string name="approach_a_nfc_Tag">Approach a NFC Tag</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="scan_tag">Scan a Tag</string>
    <string name="cancel">Cancel</string>
    
    <string name="androidApplication">Android Application</string>
    <string name="androidApplicationPackageName">Package name</string>
    <string name="absoluteURI">Absolute URI</string>
    <string name="action">Action</string>
    <string name="actionAction">Action</string>
    <string name="alternativeCarrier">Alternative Carrier</string>
    <string name="alternativeCarrierCarrierPowerState">Carrier power state</string>
    <string name="alternativeCarrierCarrierDataReference">Carrier data reference</string>
    <string name="alternativeCarrierAuxiliaryDataReferences">Auxiliary data references</string>
    <string name="empty">Empty</string>
    <string name="reserved">Reserved</string>
    <string name="unchanged">Unchanged</string>
    <string name="external">External</string>
    <string name="domain">Domain</string>
    <string name="type">Type</string>
    <string name="data">Data</string>
    <string name="dataSize">%d bytes</string>
    <string name="genericControl">Generic Control</string>
    <string name="genericControlConfigurationByte">Configuration byte</string>
    <string name="genericControlTarget">Target</string>
    <string name="genericControlAction">Action</string>
    <string name="genericControlData">Data</string>
    <string name="genericControlDataRecords">%d data records</string>
    <string name="handoverCarrier">Handover Carrier</string>
    <string name="handoverCarrierCarrierTypeFormat">Carrier type format</string>
    <string name="handoverCarrierCarrierType">Carrier type</string>
    <string name="handoverCarrierCarrierData">Carrier data</string>
    <string name="handoverCarrierCarrierDataValue">%d bytes</string>
    <string name="handoverRequest">Handover Request</string>
    <string name="handoverRequestMajorVersion">Major version</string>
    <string name="handoverRequestMinorVersion">Minor version</string>
    <string name="handoverRequestCollisionResolution">Collision resolution</string>
    <string name="handoverRequestAlternativeCarriers">Alternative carriers</string>
    <string name="handoverSelect">Handover Select</string>
    <string name="handoverSelectMajorVersion">Major version</string>
    <string name="handoverSelectMinorVersion">Minor version</string>
    <string name="handoverSelectAlternativeCarriers">Alternative carriers</string>
    <string name="handoverSelectError">Error</string>
    <string name="mimemedia">Mimemedia</string>
    <string name="mimemediaMimetype">Mimetype</string>
    <string name="mimemediaSize">Payload size</string>
    <string name="smartPoster">Smart Poster</string>
    <string name="smartPosterTitle">Title</string>
    <string name="smartPosterAction">Action</string>
    <string name="smartPosterURI">URI</string>
    <string name="text">Text</string>
    <string name="textMessage">Message</string>
    <string name="textEncoding">Encoding</string>
    <string name="textLocale">Locale</string>
    <string name="unknown">Unknown</string>
    <string name="uri">URI</string>
    <string name="wellknownURI">Well-known URI</string>
    <string name="nfcAvailableEnabled">NFC available and enabled.</string>
    <string name="nfcAvailableDisabled">NFC available but disabled.</string>
    <string name="nfcBeamAvailableEnabled">Beam enabled.</string>
    <string name="nfcBeamAvailableDisabled">Beam disabled.</string>
    <string name="nfcBeamed">Message beamed.</string>
    <string name="noNfcMessage">NFC is not available.</string>
    <string name="tagNotWritable">Tag is not writable.</string>
    <string name="ndefWriteFailed">Write tag failed: %s</string>
    <string name="ndefWriteSuccess">Write tag successful.</string>
    <string name="nfcSettingEnabled">NFC enabled in settings.</string>
    <string name="nfcSettingDisabled">NFC disabled in settings.</string>
    <string name="ndefUnformattedWriteFailed">Write unformatted tag failed.</string>
    <string name="ndefFormattedWriteFailed">Write formatted failed.</string>
    <string name="readEmptyMessage">Read empty message.</string>
    <string name="readNonNDEFMessage">Read non-NDEF message.</string>
    <string name="readUnparsableNDEFMessage">Read NDEF message but was unable to parse.</string>
    <string name="readSingleRecordNDEFMessage">Read single-record NDEF message.</string>
    <string name="readMultipleRecordNDEFMessage">Read multi-record NDEF message.</string>
    <string name="wroteUnformattedTag">Wrote unfromatted tag.</string>
    <string name="wroteFormattedTag">Wrote formatted tag.</string>
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes.</string>

</resources>