<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/item_type_and_nfc_storage_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_bg"
                    android:orientation="vertical"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textViewTagType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewMaxSize"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dip" />
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/content"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_bg"
                    android:minHeight="100dip"
                    android:orientation="vertical"
                    android:padding="5dip" >

                    <ListView
                        android:id="@+id/listViewContent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:cacheColorHint="@android:color/transparent"
                        android:orientation="horizontal" />
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/cipher_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_bg"
                    android:orientation="horizontal"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textViewCiphertext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dip" />

                    <Button
                        android:id="@+id/buttonDecrypt"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/decrypt"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/plain_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_bg"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textViewPlaintext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/scan_tag"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>